--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.1",
     "stripe": "^14.18.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
